--- a/app.json
+++ b/app.json
@@ -18,6 +18,11 @@
       "required": false,
       "value": ""
     },
+    "ARQ_API_KEY": {
+      "description": "Get from @ARQRobot.",
+      "required": false,
+      "value": ""
+    },
     "API_ID": {
       "description": "App ID from my.telegram.org/apps",
       "required": true
